[gd_scene load_steps=5 format=3 uid="uid://dkf418jeykrkf"]

[ext_resource type="Script" path="res://scripts/object_scripts/door.gd" id="1_7blwi"]
[ext_resource type="ArrayMesh" uid="uid://db8v6vrlqol4s" path="res://assets/MovableDoor.obj" id="1_cju28"]
[ext_resource type="PackedScene" uid="uid://c1wfxgo0x3eu7" path="res://scenes/identifier.tscn" id="1_grac4"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_xfypr"]
data = PackedVector3Array(-0.2, 0, -6.1, -0.2, 0.5, 5.4, -0.2, 0, 6, -0.2, 0, -6.1, -0.2, 0.5, -5.5, -0.2, 0.5, 5.4, -0.2, 0.8, -5.2, -0.2, 8.6, 5.1, -0.2, 0.8, 5.1, -0.2, 0.8, -5.2, -0.2, 8.6, -5.2, -0.2, 8.6, 5.1, -0.2, 0.5, 5.4, -0.2, 8.8, 5.4, -0.2, 0, 6, -0.2, 0, -6.1, -0.2, 8.8, -5.5, -0.2, 0.5, -5.5, -0.2, 8.8, 5.4, -0.2, 9.4, 5.4, -0.2, 0, 6, -0.2, 8.8, -5.5, -0.2, 9.4, 5.4, -0.2, 8.8, 5.4, -0.2, 8.8, -5.5, -0.2, 9.4, 1.2, -0.2, 9.4, 5.4, -0.2, 8.8, -5.5, -0.2, 9.4, -1.3, -0.2, 9.4, 1.2, -0.2, 0, -6.1, -0.2, 9.4, -5.5, -0.2, 8.8, -5.5, -0.2, 8.8, -5.5, -0.2, 9.4, -5.5, -0.2, 9.4, -1.3, -0.2, 9.4, -1.3, -0.2, 9.6, 1, -0.2, 9.4, 1.2, -0.2, 9.4, -1.3, -0.2, 9.6, 0.8, -0.2, 9.6, 1, -0.2, 9.4, -1.3, -0.2, 9.6, 0.6, -0.2, 9.6, 0.8, -0.2, 9.4, -1.3, -0.2, 9.6, 0.4, -0.2, 9.6, 0.6, -0.2, 9.4, -1.3, -0.2, 9.6, 0.2, -0.2, 9.6, 0.4, -0.2, 9.4, -1.3, -0.2, 9.6, 0, -0.2, 9.6, 0.2, -0.2, 9.4, -1.3, -0.2, 9.6, -0.1, -0.2, 9.6, 0, -0.2, 9.4, -1.3, -0.2, 9.6, -0.3, -0.2, 9.6, -0.1, -0.2, 9.4, -1.3, -0.2, 9.6, -0.5, -0.2, 9.6, -0.3, -0.2, 9.4, -1.3, -0.2, 9.6, -0.7, -0.2, 9.6, -0.5, -0.2, 9.4, -1.3, -0.2, 9.6, -0.9, -0.2, 9.6, -0.7, -0.2, 9.4, -1.3, -0.2, 9.6, -1.1, -0.2, 9.6, -0.9, -0.2, 9.7, 1.5, -0.2, 15.1, 5.1, -0.2, 9.7, 5.1, -0.2, 9.7, 1.5, -0.2, 15.1, 1.5, -0.2, 15.1, 5.1, -0.2, 9.7, -5.2, -0.2, 15.1, -1.6, -0.2, 9.7, -1.6, -0.2, 9.7, -5.2, -0.2, 15.1, -5.2, -0.2, 15.1, -1.6, -0.2, 9.6, 1, -0.2, 15.2, 1, -0.2, 9.4, 1.2, -0.2, 9.6, 0.6, -0.2, 15.2, 0.8, -0.2, 9.6, 0.8, -0.2, 9.6, 0.6, -0.2, 15.2, 0.6, -0.2, 15.2, 0.8, -0.2, 9.6, 0.2, -0.2, 15.2, 0.4, -0.2, 9.6, 0.4, -0.2, 9.6, 0.2, -0.2, 15.2, 0.2, -0.2, 15.2, 0.4, -0.2, 9.6, -0.1, -0.2, 15.2, 0, -0.2, 9.6, 0, -0.2, 9.6, -0.1, -0.2, 15.2, -0.1, -0.2, 15.2, 0, -0.2, 9.6, -0.5, -0.2, 15.2, -0.3, -0.2, 9.6, -0.3, -0.2, 9.6, -0.5, -0.2, 15.2, -0.5, -0.2, 15.2, -0.3, -0.2, 9.6, -0.9, -0.2, 15.2, -0.7, -0.2, 9.6, -0.7, -0.2, 9.6, -0.9, -0.2, 15.2, -0.9, -0.2, 15.2, -0.7, -0.2, 9.4, -1.3, -0.2, 15.2, -1.1, -0.2, 9.6, -1.1, -0.2, 9.4, 5.4, -0.2, 15.4, 5.4, -0.2, 0, 6, -0.2, 15.2, -1.1, -0.2, 15.4, 1.2, -0.2, 15.2, -0.9, -0.2, 15.2, -0.9, -0.2, 15.4, 1.2, -0.2, 15.2, -0.7, -0.2, 15.2, 1, -0.2, 15.4, 1.2, -0.2, 9.4, 1.2, -0.2, 15.2, -0.5, -0.2, 15.4, 1.2, -0.2, 15.2, -0.3, -0.2, 15.2, -0.7, -0.2, 15.4, 1.2, -0.2, 15.2, -0.5, -0.2, 15.2, 0.6, -0.2, 15.4, 1.2, -0.2, 15.2, 0.8, -0.2, 15.2, -0.3, -0.2, 15.4, 1.2, -0.2, 15.2, -0.1, -0.2, 15.2, -0.1, -0.2, 15.4, 1.2, -0.2, 15.2, 0, -0.2, 15.2, 0, -0.2, 15.4, 1.2, -0.2, 15.2, 0.2, -0.2, 15.2, 0.2, -0.2, 15.4, 1.2, -0.2, 15.2, 0.4, -0.2, 15.2, 0.4, -0.2, 15.4, 1.2, -0.2, 15.2, 0.6, -0.2, 15.2, 0.8, -0.2, 15.4, 1.2, -0.2, 15.2, 1, -0.2, 9.4, -1.3, -0.2, 15.4, -1.3, -0.2, 15.2, -1.1, -0.2, 15.2, -1.1, -0.2, 15.4, -1.3, -0.2, 15.4, 1.2, -0.2, 0, -6.1, -0.2, 15.4, -5.5, -0.2, 9.4, -5.5, -0.2, 15.4, -1.3, -0.2, 15.9, 6, -0.2, 15.4, 1.2, -0.2, 15.4, -5.5, -0.2, 15.9, 6, -0.2, 15.4, -1.3, -0.2, 15.4, 5.4, -0.2, 15.9, 6, -0.2, 0, 6, -0.2, 15.4, 1.2, -0.2, 15.9, 6, -0.2, 15.4, 5.4, -0.2, 0, -6.1, -0.2, 15.9, -6.1, -0.2, 15.4, -5.5, -0.2, 15.4, -5.5, -0.2, 15.9, -6.1, -0.2, 15.9, 6, -0.1, 0.5, -5.5, -0.1, 0.8, 5.1, -0.1, 0.5, 5.4, -0.1, 0.5, -5.5, -0.1, 0.8, -5.2, -0.1, 0.8, 5.1, -0.1, 0.8, 5.1, -0.1, 8.6, 5.1, -0.1, 0.5, 5.4, -0.1, 0.5, -5.5, -0.1, 8.6, -5.2, -0.1, 0.8, -5.2, -0.1, 8.6, 5.1, -0.1, 8.8, 5.4, -0.1, 0.5, 5.4, -0.1, 8.6, -5.2, -0.1, 8.8, 5.4, -0.1, 8.6, 5.1, -0.1, 0.5, -5.5, -0.1, 8.8, -5.5, -0.1, 8.6, -5.2, -0.1, 8.6, -5.2, -0.1, 8.8, -5.5, -0.1, 8.8, 5.4, -0.1, 9.4, 1.2, -0.1, 9.7, 5.1, -0.1, 9.4, 5.4, -0.1, 9.4, 1.2, -0.1, 9.7, 1.5, -0.1, 9.7, 5.1, -0.1, 9.4, -5.5, -0.1, 9.7, -1.6, -0.1, 9.4, -1.3, -0.1, 9.4, -5.5, -0.1, 9.7, -5.2, -0.1, 9.7, -1.6, -0.1, 9.7, 5.1, -0.1, 15.1, 5.1, -0.1, 9.4, 5.4, -0.1, 9.4, 1.2, -0.1, 15.1, 1.5, -0.1, 9.7, 1.5, -0.1, 9.7, -1.6, -0.1, 15.1, -1.6, -0.1, 9.4, -1.3, -0.1, 9.4, -5.5, -0.1, 15.1, -5.2, -0.1, 9.7, -5.2, -0.1, 15.1, 5.1, -0.1, 15.4, 5.4, -0.1, 9.4, 5.4, -0.1, 15.1, 1.5, -0.1, 15.4, 5.4, -0.1, 15.1, 5.1, -0.1, 9.4, 1.2, -0.1, 15.4, 1.2, -0.1, 15.1, 1.5, -0.1, 15.1, 1.5, -0.1, 15.4, 1.2, -0.1, 15.4, 5.4, -0.1, 15.1, -5.2, -0.1, 15.4, -1.3, -0.1, 15.1, -1.6, -0.1, 15.1, -1.6, -0.1, 15.4, -1.3, -0.1, 9.4, -1.3, -0.1, 9.4, -5.5, -0.1, 15.4, -5.5, -0.1, 15.1, -5.2, -0.1, 15.1, -5.2, -0.1, 15.4, -5.5, -0.1, 15.4, -1.3, 0.1, 0.5, -5.5, 0.1, 0.5, 5.4, 0.1, 0.8, 5.1, 0.1, 0.5, -5.5, 0.1, 0.8, 5.1, 0.1, 0.8, -5.2, 0.1, 0.8, 5.1, 0.1, 0.5, 5.4, 0.1, 8.6, 5.1, 0.1, 0.5, -5.5, 0.1, 0.8, -5.2, 0.1, 8.6, -5.2, 0.1, 8.6, 5.1, 0.1, 0.5, 5.4, 0.1, 8.8, 5.4, 0.1, 8.6, -5.2, 0.1, 8.6, 5.1, 0.1, 8.8, 5.4, 0.1, 0.5, -5.5, 0.1, 8.6, -5.2, 0.1, 8.8, -5.5, 0.1, 8.6, -5.2, 0.1, 8.8, 5.4, 0.1, 8.8, -5.5, 0.1, 9.4, 1.2, 0.1, 9.4, 5.4, 0.1, 9.7, 5.1, 0.1, 9.4, 1.2, 0.1, 9.7, 5.1, 0.1, 9.7, 1.5, 0.1, 9.4, -5.5, 0.1, 9.4, -1.3, 0.1, 9.7, -1.6, 0.1, 9.4, -5.5, 0.1, 9.7, -1.6, 0.1, 9.7, -5.2, 0.1, 9.7, 5.1, 0.1, 9.4, 5.4, 0.1, 15.1, 5.1, 0.1, 9.4, 1.2, 0.1, 9.7, 1.5, 0.1, 15.1, 1.5, 0.1, 9.7, -1.6, 0.1, 9.4, -1.3, 0.1, 15.1, -1.6, 0.1, 9.4, -5.5, 0.1, 9.7, -5.2, 0.1, 15.1, -5.2, 0.1, 15.1, 5.1, 0.1, 9.4, 5.4, 0.1, 15.4, 5.4, 0.1, 15.1, 1.5, 0.1, 15.1, 5.1, 0.1, 15.4, 5.4, 0.1, 9.4, 1.2, 0.1, 15.1, 1.5, 0.1, 15.4, 1.2, 0.1, 15.1, 1.5, 0.1, 15.4, 5.4, 0.1, 15.4, 1.2, 0.1, 15.1, -5.2, 0.1, 15.1, -1.6, 0.1, 15.4, -1.3, 0.1, 15.1, -1.6, 0.1, 9.4, -1.3, 0.1, 15.4, -1.3, 0.1, 9.4, -5.5, 0.1, 15.1, -5.2, 0.1, 15.4, -5.5, 0.1, 15.1, -5.2, 0.1, 15.4, -1.3, 0.1, 15.4, -5.5, 0.2, 0, -6.1, 0.2, 0, 6, 0.2, 0.5, 5.4, 0.2, 0, -6.1, 0.2, 0.5, 5.4, 0.2, 0.5, -5.5, 0.2, 0.8, -5.2, 0.2, 0.8, 5.1, 0.2, 8.6, 5.1, 0.2, 0.8, -5.2, 0.2, 8.6, 5.1, 0.2, 8.6, -5.2, 0.2, 0.5, 5.4, 0.2, 0, 6, 0.2, 8.8, 5.4, 0.2, 0, -6.1, 0.2, 0.5, -5.5, 0.2, 8.8, -5.5, 0.2, 8.8, 5.4, 0.2, 0, 6, 0.2, 9.4, 5.4, 0.2, 8.8, -5.5, 0.2, 8.8, 5.4, 0.2, 9.4, 5.4, 0.2, 8.8, -5.5, 0.2, 9.4, 5.4, 0.2, 9.4, 1.2, 0.2, 8.8, -5.5, 0.2, 9.4, 1.2, 0.2, 9.4, -1.3, 0.2, 0, -6.1, 0.2, 8.8, -5.5, 0.2, 9.4, -5.5, 0.2, 8.8, -5.5, 0.2, 9.4, -1.3, 0.2, 9.4, -5.5, 0.2, 9.4, -1.3, 0.2, 9.4, 1.2, 0.2, 9.6, 1, 0.2, 9.4, -1.3, 0.2, 9.6, 1, 0.2, 9.6, 0.8, 0.2, 9.4, -1.3, 0.2, 9.6, 0.8, 0.2, 9.6, 0.6, 0.2, 9.4, -1.3, 0.2, 9.6, 0.6, 0.2, 9.6, 0.4, 0.2, 9.4, -1.3, 0.2, 9.6, 0.4, 0.2, 9.6, 0.2, 0.2, 9.4, -1.3, 0.2, 9.6, 0.2, 0.2, 9.6, 0, 0.2, 9.4, -1.3, 0.2, 9.6, 0, 0.2, 9.6, -0.1, 0.2, 9.4, -1.3, 0.2, 9.6, -0.1, 0.2, 9.6, -0.3, 0.2, 9.4, -1.3, 0.2, 9.6, -0.3, 0.2, 9.6, -0.5, 0.2, 9.4, -1.3, 0.2, 9.6, -0.5, 0.2, 9.6, -0.7, 0.2, 9.4, -1.3, 0.2, 9.6, -0.7, 0.2, 9.6, -0.9, 0.2, 9.4, -1.3, 0.2, 9.6, -0.9, 0.2, 9.6, -1.1, 0.2, 9.7, 1.5, 0.2, 9.7, 5.1, 0.2, 15.1, 5.1, 0.2, 9.7, 1.5, 0.2, 15.1, 5.1, 0.2, 15.1, 1.5, 0.2, 9.7, -5.2, 0.2, 9.7, -1.6, 0.2, 15.1, -1.6, 0.2, 9.7, -5.2, 0.2, 15.1, -1.6, 0.2, 15.1, -5.2, 0.2, 9.6, 1, 0.2, 9.4, 1.2, 0.2, 15.2, 1, 0.2, 9.6, 0.6, 0.2, 9.6, 0.8, 0.2, 15.2, 0.8, 0.2, 9.6, 0.6, 0.2, 15.2, 0.8, 0.2, 15.2, 0.6, 0.2, 9.6, 0.2, 0.2, 9.6, 0.4, 0.2, 15.2, 0.4, 0.2, 9.6, 0.2, 0.2, 15.2, 0.4, 0.2, 15.2, 0.2, 0.2, 9.6, -0.1, 0.2, 9.6, 0, 0.2, 15.2, 0, 0.2, 9.6, -0.1, 0.2, 15.2, 0, 0.2, 15.2, -0.1, 0.2, 9.6, -0.5, 0.2, 9.6, -0.3, 0.2, 15.2, -0.3, 0.2, 9.6, -0.5, 0.2, 15.2, -0.3, 0.2, 15.2, -0.5, 0.2, 9.6, -0.9, 0.2, 9.6, -0.7, 0.2, 15.2, -0.7, 0.2, 9.6, -0.9, 0.2, 15.2, -0.7, 0.2, 15.2, -0.9, 0.2, 9.4, -1.3, 0.2, 9.6, -1.1, 0.2, 15.2, -1.1, 0.2, 9.4, 5.4, 0.2, 0, 6, 0.2, 15.4, 5.4, 0.2, 15.2, -1.1, 0.2, 15.2, -0.9, 0.2, 15.4, 1.2, 0.2, 15.2, -0.9, 0.2, 15.2, -0.7, 0.2, 15.4, 1.2, 0.2, 15.2, 1, 0.2, 9.4, 1.2, 0.2, 15.4, 1.2, 0.2, 15.2, -0.5, 0.2, 15.2, -0.3, 0.2, 15.4, 1.2, 0.2, 15.2, -0.7, 0.2, 15.2, -0.5, 0.2, 15.4, 1.2, 0.2, 15.2, 0.6, 0.2, 15.2, 0.8, 0.2, 15.4, 1.2, 0.2, 15.2, -0.3, 0.2, 15.2, -0.1, 0.2, 15.4, 1.2, 0.2, 15.2, -0.1, 0.2, 15.2, 0, 0.2, 15.4, 1.2, 0.2, 15.2, 0, 0.2, 15.2, 0.2, 0.2, 15.4, 1.2, 0.2, 15.2, 0.2, 0.2, 15.2, 0.4, 0.2, 15.4, 1.2, 0.2, 15.2, 0.4, 0.2, 15.2, 0.6, 0.2, 15.4, 1.2, 0.2, 15.2, 0.8, 0.2, 15.2, 1, 0.2, 15.4, 1.2, 0.2, 9.4, -1.3, 0.2, 15.2, -1.1, 0.2, 15.4, -1.3, 0.2, 15.2, -1.1, 0.2, 15.4, 1.2, 0.2, 15.4, -1.3, 0.2, 0, -6.1, 0.2, 9.4, -5.5, 0.2, 15.4, -5.5, 0.2, 15.4, -1.3, 0.2, 15.4, 1.2, 0.2, 15.9, 6, 0.2, 15.4, -5.5, 0.2, 15.4, -1.3, 0.2, 15.9, 6, 0.2, 15.4, 5.4, 0.2, 0, 6, 0.2, 15.9, 6, 0.2, 15.4, 1.2, 0.2, 15.4, 5.4, 0.2, 15.9, 6, 0.2, 0, -6.1, 0.2, 15.4, -5.5, 0.2, 15.9, -6.1, 0.2, 15.4, -5.5, 0.2, 15.9, 6, 0.2, 15.9, -6.1, -0.2, 15.9, 6, 0.2, 0, 6, -0.2, 0, 6, -0.2, 15.9, 6, 0.2, 15.9, 6, 0.2, 0, 6, -0.2, 8.6, 5.1, -0.1, 0.8, 5.1, -0.2, 0.8, 5.1, -0.2, 8.6, 5.1, -0.1, 8.6, 5.1, -0.1, 0.8, 5.1, -0.2, 15.1, 5.1, -0.1, 9.7, 5.1, -0.2, 9.7, 5.1, -0.2, 15.1, 5.1, -0.1, 15.1, 5.1, -0.1, 9.7, 5.1, 0.1, 8.6, 5.1, 0.2, 0.8, 5.1, 0.1, 0.8, 5.1, 0.1, 8.6, 5.1, 0.2, 8.6, 5.1, 0.2, 0.8, 5.1, 0.1, 15.1, 5.1, 0.2, 9.7, 5.1, 0.1, 9.7, 5.1, 0.1, 15.1, 5.1, 0.2, 15.1, 5.1, 0.2, 9.7, 5.1, -0.2, 15.4, 1.2, -0.1, 9.4, 1.2, -0.2, 9.4, 1.2, -0.2, 15.4, 1.2, -0.1, 15.4, 1.2, -0.1, 9.4, 1.2, 0.1, 15.4, 1.2, 0.2, 9.4, 1.2, 0.1, 9.4, 1.2, 0.1, 15.4, 1.2, 0.2, 15.4, 1.2, 0.2, 9.4, 1.2, -0.2, 15.2, 0.8, -0.1, 9.6, 0.8, -0.2, 9.6, 0.8, -0.2, 15.2, 0.8, -0.1, 15.2, 0.8, -0.1, 9.6, 0.8, -0.1, 15.2, 0.8, 0.1, 9.6, 0.8, -0.1, 9.6, 0.8, -0.1, 15.2, 0.8, 0.1, 15.2, 0.8, 0.1, 9.6, 0.8, 0.1, 15.2, 0.8, 0.2, 9.6, 0.8, 0.1, 9.6, 0.8, 0.1, 15.2, 0.8, 0.2, 15.2, 0.8, 0.2, 9.6, 0.8, -0.2, 15.2, 0.4, -0.1, 9.6, 0.4, -0.2, 9.6, 0.4, -0.2, 15.2, 0.4, -0.1, 15.2, 0.4, -0.1, 9.6, 0.4, -0.1, 15.2, 0.4, 0.1, 9.6, 0.4, -0.1, 9.6, 0.4, -0.1, 15.2, 0.4, 0.1, 15.2, 0.4, 0.1, 9.6, 0.4, 0.1, 15.2, 0.4, 0.2, 9.6, 0.4, 0.1, 9.6, 0.4, 0.1, 15.2, 0.4, 0.2, 15.2, 0.4, 0.2, 9.6, 0.4, -0.2, 15.2, 0, -0.1, 9.6, 0, -0.2, 9.6, 0, -0.2, 15.2, 0, -0.1, 15.2, 0, -0.1, 9.6, 0, -0.1, 15.2, 0, 0.1, 9.6, 0, -0.1, 9.6, 0, -0.1, 15.2, 0, 0.1, 15.2, 0, 0.1, 9.6, 0, 0.1, 15.2, 0, 0.2, 9.6, 0, 0.1, 9.6, 0, 0.1, 15.2, 0, 0.2, 15.2, 0, 0.2, 9.6, 0, -0.2, 15.2, -0.3, -0.1, 9.6, -0.3, -0.2, 9.6, -0.3, -0.2, 15.2, -0.3, -0.1, 15.2, -0.3, -0.1, 9.6, -0.3, -0.1, 15.2, -0.3, 0.1, 9.6, -0.3, -0.1, 9.6, -0.3, -0.1, 15.2, -0.3, 0.1, 15.2, -0.3, 0.1, 9.6, -0.3, 0.1, 15.2, -0.3, 0.2, 9.6, -0.3, 0.1, 9.6, -0.3, 0.1, 15.2, -0.3, 0.2, 15.2, -0.3, 0.2, 9.6, -0.3, -0.2, 15.2, -0.7, -0.1, 9.6, -0.7, -0.2, 9.6, -0.7, -0.2, 15.2, -0.7, -0.1, 15.2, -0.7, -0.1, 9.6, -0.7, -0.1, 15.2, -0.7, 0.1, 9.6, -0.7, -0.1, 9.6, -0.7, -0.1, 15.2, -0.7, 0.1, 15.2, -0.7, 0.1, 9.6, -0.7, 0.1, 15.2, -0.7, 0.2, 9.6, -0.7, 0.1, 9.6, -0.7, 0.1, 15.2, -0.7, 0.2, 15.2, -0.7, 0.2, 9.6, -0.7, -0.2, 15.2, -1.1, -0.1, 9.6, -1.1, -0.2, 9.6, -1.1, -0.2, 15.2, -1.1, -0.1, 15.2, -1.1, -0.1, 9.6, -1.1, -0.1, 15.2, -1.1, 0.1, 9.6, -1.1, -0.1, 9.6, -1.1, -0.1, 15.2, -1.1, 0.1, 15.2, -1.1, 0.1, 9.6, -1.1, 0.1, 15.2, -1.1, 0.2, 9.6, -1.1, 0.1, 9.6, -1.1, 0.1, 15.2, -1.1, 0.2, 15.2, -1.1, 0.2, 9.6, -1.1, -0.2, 15.1, -1.6, -0.1, 9.7, -1.6, -0.2, 9.7, -1.6, -0.2, 15.1, -1.6, -0.1, 15.1, -1.6, -0.1, 9.7, -1.6, 0.1, 15.1, -1.6, 0.2, 9.7, -1.6, 0.1, 9.7, -1.6, 0.1, 15.1, -1.6, 0.2, 15.1, -1.6, 0.2, 9.7, -1.6, -0.2, 8.8, -5.5, -0.1, 0.5, -5.5, -0.2, 0.5, -5.5, -0.2, 8.8, -5.5, -0.1, 8.8, -5.5, -0.1, 0.5, -5.5, -0.2, 15.4, -5.5, -0.1, 9.4, -5.5, -0.2, 9.4, -5.5, -0.2, 15.4, -5.5, -0.1, 15.4, -5.5, -0.1, 9.4, -5.5, 0.1, 8.8, -5.5, 0.2, 0.5, -5.5, 0.1, 0.5, -5.5, 0.1, 8.8, -5.5, 0.2, 8.8, -5.5, 0.2, 0.5, -5.5, 0.1, 15.4, -5.5, 0.2, 9.4, -5.5, 0.1, 9.4, -5.5, 0.1, 15.4, -5.5, 0.2, 15.4, -5.5, 0.2, 9.4, -5.5, -0.2, 8.8, 5.4, -0.2, 0.5, 5.4, -0.1, 0.5, 5.4, -0.2, 8.8, 5.4, -0.1, 0.5, 5.4, -0.1, 8.8, 5.4, -0.2, 15.4, 5.4, -0.2, 9.4, 5.4, -0.1, 9.4, 5.4, -0.2, 15.4, 5.4, -0.1, 9.4, 5.4, -0.1, 15.4, 5.4, 0.1, 8.8, 5.4, 0.1, 0.5, 5.4, 0.2, 0.5, 5.4, 0.1, 8.8, 5.4, 0.2, 0.5, 5.4, 0.2, 8.8, 5.4, 0.1, 15.4, 5.4, 0.1, 9.4, 5.4, 0.2, 9.4, 5.4, 0.1, 15.4, 5.4, 0.2, 9.4, 5.4, 0.2, 15.4, 5.4, -0.2, 15.1, 1.5, -0.2, 9.7, 1.5, -0.1, 9.7, 1.5, -0.2, 15.1, 1.5, -0.1, 9.7, 1.5, -0.1, 15.1, 1.5, 0.1, 15.1, 1.5, 0.1, 9.7, 1.5, 0.2, 9.7, 1.5, 0.1, 15.1, 1.5, 0.2, 9.7, 1.5, 0.2, 15.1, 1.5, -0.2, 15.2, 1, -0.2, 9.6, 1, -0.1, 9.6, 1, -0.2, 15.2, 1, -0.1, 9.6, 1, -0.1, 15.2, 1, -0.1, 15.2, 1, -0.1, 9.6, 1, 0.1, 9.6, 1, -0.1, 15.2, 1, 0.1, 9.6, 1, 0.1, 15.2, 1, 0.1, 15.2, 1, 0.1, 9.6, 1, 0.2, 9.6, 1, 0.1, 15.2, 1, 0.2, 9.6, 1, 0.2, 15.2, 1, -0.2, 15.2, 0.6, -0.2, 9.6, 0.6, -0.1, 9.6, 0.6, -0.2, 15.2, 0.6, -0.1, 9.6, 0.6, -0.1, 15.2, 0.6, -0.1, 15.2, 0.6, -0.1, 9.6, 0.6, 0.1, 9.6, 0.6, -0.1, 15.2, 0.6, 0.1, 9.6, 0.6, 0.1, 15.2, 0.6, 0.1, 15.2, 0.6, 0.1, 9.6, 0.6, 0.2, 9.6, 0.6, 0.1, 15.2, 0.6, 0.2, 9.6, 0.6, 0.2, 15.2, 0.6, -0.2, 15.2, 0.2, -0.2, 9.6, 0.2, -0.1, 9.6, 0.2, -0.2, 15.2, 0.2, -0.1, 9.6, 0.2, -0.1, 15.2, 0.2, -0.1, 15.2, 0.2, -0.1, 9.6, 0.2, 0.1, 9.6, 0.2, -0.1, 15.2, 0.2, 0.1, 9.6, 0.2, 0.1, 15.2, 0.2, 0.1, 15.2, 0.2, 0.1, 9.6, 0.2, 0.2, 9.6, 0.2, 0.1, 15.2, 0.2, 0.2, 9.6, 0.2, 0.2, 15.2, 0.2, -0.2, 15.2, -0.1, -0.2, 9.6, -0.1, -0.1, 9.6, -0.1, -0.2, 15.2, -0.1, -0.1, 9.6, -0.1, -0.1, 15.2, -0.1, -0.1, 15.2, -0.1, -0.1, 9.6, -0.1, 0.1, 9.6, -0.1, -0.1, 15.2, -0.1, 0.1, 9.6, -0.1, 0.1, 15.2, -0.1, 0.1, 15.2, -0.1, 0.1, 9.6, -0.1, 0.2, 9.6, -0.1, 0.1, 15.2, -0.1, 0.2, 9.6, -0.1, 0.2, 15.2, -0.1, -0.2, 15.2, -0.5, -0.2, 9.6, -0.5, -0.1, 9.6, -0.5, -0.2, 15.2, -0.5, -0.1, 9.6, -0.5, -0.1, 15.2, -0.5, -0.1, 15.2, -0.5, -0.1, 9.6, -0.5, 0.1, 9.6, -0.5, -0.1, 15.2, -0.5, 0.1, 9.6, -0.5, 0.1, 15.2, -0.5, 0.1, 15.2, -0.5, 0.1, 9.6, -0.5, 0.2, 9.6, -0.5, 0.1, 15.2, -0.5, 0.2, 9.6, -0.5, 0.2, 15.2, -0.5, -0.2, 15.2, -0.9, -0.2, 9.6, -0.9, -0.1, 9.6, -0.9, -0.2, 15.2, -0.9, -0.1, 9.6, -0.9, -0.1, 15.2, -0.9, -0.1, 15.2, -0.9, -0.1, 9.6, -0.9, 0.1, 9.6, -0.9, -0.1, 15.2, -0.9, 0.1, 9.6, -0.9, 0.1, 15.2, -0.9, 0.1, 15.2, -0.9, 0.1, 9.6, -0.9, 0.2, 9.6, -0.9, 0.1, 15.2, -0.9, 0.2, 9.6, -0.9, 0.2, 15.2, -0.9, -0.2, 15.4, -1.3, -0.2, 9.4, -1.3, -0.1, 9.4, -1.3, -0.2, 15.4, -1.3, -0.1, 9.4, -1.3, -0.1, 15.4, -1.3, 0.1, 15.4, -1.3, 0.1, 9.4, -1.3, 0.2, 9.4, -1.3, 0.1, 15.4, -1.3, 0.2, 9.4, -1.3, 0.2, 15.4, -1.3, -0.2, 8.6, -5.2, -0.2, 0.8, -5.2, -0.1, 0.8, -5.2, -0.2, 8.6, -5.2, -0.1, 0.8, -5.2, -0.1, 8.6, -5.2, -0.2, 15.1, -5.2, -0.2, 9.7, -5.2, -0.1, 9.7, -5.2, -0.2, 15.1, -5.2, -0.1, 9.7, -5.2, -0.1, 15.1, -5.2, 0.1, 8.6, -5.2, 0.1, 0.8, -5.2, 0.2, 0.8, -5.2, 0.1, 8.6, -5.2, 0.2, 0.8, -5.2, 0.2, 8.6, -5.2, 0.1, 15.1, -5.2, 0.1, 9.7, -5.2, 0.2, 9.7, -5.2, 0.1, 15.1, -5.2, 0.2, 9.7, -5.2, 0.2, 15.1, -5.2, -0.2, 15.9, -6.1, -0.2, 0, -6.1, 0.2, 0, -6.1, -0.2, 15.9, -6.1, 0.2, 0, -6.1, 0.2, 15.9, -6.1, 0.2, 0, 6, -0.2, 0, -6.1, -0.2, 0, 6, 0.2, 0, 6, 0.2, 0, -6.1, -0.2, 0, -6.1, -0.1, 0.8, 5.1, -0.2, 0.8, -5.2, -0.2, 0.8, 5.1, -0.1, 0.8, 5.1, -0.1, 0.8, -5.2, -0.2, 0.8, -5.2, 0.2, 0.8, 5.1, 0.1, 0.8, -5.2, 0.1, 0.8, 5.1, 0.2, 0.8, 5.1, 0.2, 0.8, -5.2, 0.1, 0.8, -5.2, -0.1, 8.8, 5.4, -0.2, 8.8, -5.5, -0.2, 8.8, 5.4, -0.1, 8.8, 5.4, -0.1, 8.8, -5.5, -0.2, 8.8, -5.5, 0.2, 8.8, 5.4, 0.1, 8.8, -5.5, 0.1, 8.8, 5.4, 0.2, 8.8, 5.4, 0.2, 8.8, -5.5, 0.1, 8.8, -5.5, -0.1, 9.7, 5.1, -0.2, 9.7, 1.5, -0.2, 9.7, 5.1, -0.1, 9.7, 5.1, -0.1, 9.7, 1.5, -0.2, 9.7, 1.5, 0.2, 9.7, 5.1, 0.1, 9.7, 1.5, 0.1, 9.7, 5.1, 0.2, 9.7, 5.1, 0.2, 9.7, 1.5, 0.1, 9.7, 1.5, -0.1, 9.7, -1.6, -0.2, 9.7, -5.2, -0.2, 9.7, -1.6, -0.1, 9.7, -1.6, -0.1, 9.7, -5.2, -0.2, 9.7, -5.2, 0.2, 9.7, -1.6, 0.1, 9.7, -5.2, 0.1, 9.7, -1.6, 0.2, 9.7, -1.6, 0.2, 9.7, -5.2, 0.1, 9.7, -5.2, -0.1, 15.2, 1, -0.2, 15.2, 0.8, -0.2, 15.2, 1, 0.1, 15.2, 1, -0.1, 15.2, 0.8, -0.1, 15.2, 1, -0.1, 15.2, 1, -0.1, 15.2, 0.8, -0.2, 15.2, 0.8, 0.2, 15.2, 1, 0.1, 15.2, 0.8, 0.1, 15.2, 1, 0.1, 15.2, 1, 0.1, 15.2, 0.8, -0.1, 15.2, 0.8, 0.2, 15.2, 1, 0.2, 15.2, 0.8, 0.1, 15.2, 0.8, -0.1, 15.2, 0.6, -0.2, 15.2, 0.4, -0.2, 15.2, 0.6, 0.1, 15.2, 0.6, -0.1, 15.2, 0.4, -0.1, 15.2, 0.6, -0.1, 15.2, 0.6, -0.1, 15.2, 0.4, -0.2, 15.2, 0.4, 0.2, 15.2, 0.6, 0.1, 15.2, 0.4, 0.1, 15.2, 0.6, 0.1, 15.2, 0.6, 0.1, 15.2, 0.4, -0.1, 15.2, 0.4, 0.2, 15.2, 0.6, 0.2, 15.2, 0.4, 0.1, 15.2, 0.4, -0.1, 15.2, 0.2, -0.2, 15.2, 0, -0.2, 15.2, 0.2, 0.1, 15.2, 0.2, -0.1, 15.2, 0, -0.1, 15.2, 0.2, -0.1, 15.2, 0.2, -0.1, 15.2, 0, -0.2, 15.2, 0, 0.2, 15.2, 0.2, 0.1, 15.2, 0, 0.1, 15.2, 0.2, 0.1, 15.2, 0.2, 0.1, 15.2, 0, -0.1, 15.2, 0, 0.2, 15.2, 0.2, 0.2, 15.2, 0, 0.1, 15.2, 0, -0.1, 15.2, -0.1, -0.2, 15.2, -0.3, -0.2, 15.2, -0.1, 0.1, 15.2, -0.1, -0.1, 15.2, -0.3, -0.1, 15.2, -0.1, -0.1, 15.2, -0.1, -0.1, 15.2, -0.3, -0.2, 15.2, -0.3, 0.2, 15.2, -0.1, 0.1, 15.2, -0.3, 0.1, 15.2, -0.1, 0.1, 15.2, -0.1, 0.1, 15.2, -0.3, -0.1, 15.2, -0.3, 0.2, 15.2, -0.1, 0.2, 15.2, -0.3, 0.1, 15.2, -0.3, -0.1, 15.2, -0.5, -0.2, 15.2, -0.7, -0.2, 15.2, -0.5, 0.1, 15.2, -0.5, -0.1, 15.2, -0.7, -0.1, 15.2, -0.5, -0.1, 15.2, -0.5, -0.1, 15.2, -0.7, -0.2, 15.2, -0.7, 0.2, 15.2, -0.5, 0.1, 15.2, -0.7, 0.1, 15.2, -0.5, 0.1, 15.2, -0.5, 0.1, 15.2, -0.7, -0.1, 15.2, -0.7, 0.2, 15.2, -0.5, 0.2, 15.2, -0.7, 0.1, 15.2, -0.7, -0.1, 15.2, -0.9, -0.2, 15.2, -1.1, -0.2, 15.2, -0.9, 0.1, 15.2, -0.9, -0.1, 15.2, -1.1, -0.1, 15.2, -0.9, -0.1, 15.2, -0.9, -0.1, 15.2, -1.1, -0.2, 15.2, -1.1, 0.2, 15.2, -0.9, 0.1, 15.2, -1.1, 0.1, 15.2, -0.9, 0.1, 15.2, -0.9, 0.1, 15.2, -1.1, -0.1, 15.2, -1.1, 0.2, 15.2, -0.9, 0.2, 15.2, -1.1, 0.1, 15.2, -1.1, -0.1, 15.4, 5.4, -0.2, 15.4, 1.2, -0.2, 15.4, 5.4, -0.1, 15.4, 5.4, -0.1, 15.4, 1.2, -0.2, 15.4, 1.2, 0.2, 15.4, 5.4, 0.1, 15.4, 1.2, 0.1, 15.4, 5.4, 0.2, 15.4, 5.4, 0.2, 15.4, 1.2, 0.1, 15.4, 1.2, -0.1, 15.4, -1.3, -0.2, 15.4, -5.5, -0.2, 15.4, -1.3, -0.1, 15.4, -1.3, -0.1, 15.4, -5.5, -0.2, 15.4, -5.5, 0.2, 15.4, -1.3, 0.1, 15.4, -5.5, 0.1, 15.4, -1.3, 0.2, 15.4, -1.3, 0.2, 15.4, -5.5, 0.1, 15.4, -5.5, -0.1, 0.5, 5.4, -0.2, 0.5, 5.4, -0.2, 0.5, -5.5, -0.1, 0.5, 5.4, -0.2, 0.5, -5.5, -0.1, 0.5, -5.5, 0.2, 0.5, 5.4, 0.1, 0.5, 5.4, 0.1, 0.5, -5.5, 0.2, 0.5, 5.4, 0.1, 0.5, -5.5, 0.2, 0.5, -5.5, -0.1, 8.6, 5.1, -0.2, 8.6, 5.1, -0.2, 8.6, -5.2, -0.1, 8.6, 5.1, -0.2, 8.6, -5.2, -0.1, 8.6, -5.2, 0.2, 8.6, 5.1, 0.1, 8.6, 5.1, 0.1, 8.6, -5.2, 0.2, 8.6, 5.1, 0.1, 8.6, -5.2, 0.2, 8.6, -5.2, -0.1, 9.4, 5.4, -0.2, 9.4, 5.4, -0.2, 9.4, 1.2, -0.1, 9.4, 5.4, -0.2, 9.4, 1.2, -0.1, 9.4, 1.2, 0.2, 9.4, 5.4, 0.1, 9.4, 5.4, 0.1, 9.4, 1.2, 0.2, 9.4, 5.4, 0.1, 9.4, 1.2, 0.2, 9.4, 1.2, -0.1, 9.4, -1.3, -0.2, 9.4, -1.3, -0.2, 9.4, -5.5, -0.1, 9.4, -1.3, -0.2, 9.4, -5.5, -0.1, 9.4, -5.5, 0.2, 9.4, -1.3, 0.1, 9.4, -1.3, 0.1, 9.4, -5.5, 0.2, 9.4, -1.3, 0.1, 9.4, -5.5, 0.2, 9.4, -5.5, -0.1, 9.6, 1, -0.2, 9.6, 1, -0.2, 9.6, 0.8, 0.1, 9.6, 1, -0.1, 9.6, 1, -0.1, 9.6, 0.8, -0.1, 9.6, 1, -0.2, 9.6, 0.8, -0.1, 9.6, 0.8, 0.2, 9.6, 1, 0.1, 9.6, 1, 0.1, 9.6, 0.8, 0.1, 9.6, 1, -0.1, 9.6, 0.8, 0.1, 9.6, 0.8, 0.2, 9.6, 1, 0.1, 9.6, 0.8, 0.2, 9.6, 0.8, -0.1, 9.6, 0.6, -0.2, 9.6, 0.6, -0.2, 9.6, 0.4, 0.1, 9.6, 0.6, -0.1, 9.6, 0.6, -0.1, 9.6, 0.4, -0.1, 9.6, 0.6, -0.2, 9.6, 0.4, -0.1, 9.6, 0.4, 0.2, 9.6, 0.6, 0.1, 9.6, 0.6, 0.1, 9.6, 0.4, 0.1, 9.6, 0.6, -0.1, 9.6, 0.4, 0.1, 9.6, 0.4, 0.2, 9.6, 0.6, 0.1, 9.6, 0.4, 0.2, 9.6, 0.4, -0.1, 9.6, 0.2, -0.2, 9.6, 0.2, -0.2, 9.6, 0, 0.1, 9.6, 0.2, -0.1, 9.6, 0.2, -0.1, 9.6, 0, -0.1, 9.6, 0.2, -0.2, 9.6, 0, -0.1, 9.6, 0, 0.2, 9.6, 0.2, 0.1, 9.6, 0.2, 0.1, 9.6, 0, 0.1, 9.6, 0.2, -0.1, 9.6, 0, 0.1, 9.6, 0, 0.2, 9.6, 0.2, 0.1, 9.6, 0, 0.2, 9.6, 0, -0.1, 9.6, -0.1, -0.2, 9.6, -0.1, -0.2, 9.6, -0.3, 0.1, 9.6, -0.1, -0.1, 9.6, -0.1, -0.1, 9.6, -0.3, -0.1, 9.6, -0.1, -0.2, 9.6, -0.3, -0.1, 9.6, -0.3, 0.2, 9.6, -0.1, 0.1, 9.6, -0.1, 0.1, 9.6, -0.3, 0.1, 9.6, -0.1, -0.1, 9.6, -0.3, 0.1, 9.6, -0.3, 0.2, 9.6, -0.1, 0.1, 9.6, -0.3, 0.2, 9.6, -0.3, -0.1, 9.6, -0.5, -0.2, 9.6, -0.5, -0.2, 9.6, -0.7, 0.1, 9.6, -0.5, -0.1, 9.6, -0.5, -0.1, 9.6, -0.7, -0.1, 9.6, -0.5, -0.2, 9.6, -0.7, -0.1, 9.6, -0.7, 0.2, 9.6, -0.5, 0.1, 9.6, -0.5, 0.1, 9.6, -0.7, 0.1, 9.6, -0.5, -0.1, 9.6, -0.7, 0.1, 9.6, -0.7, 0.2, 9.6, -0.5, 0.1, 9.6, -0.7, 0.2, 9.6, -0.7, -0.1, 9.6, -0.9, -0.2, 9.6, -0.9, -0.2, 9.6, -1.1, 0.1, 9.6, -0.9, -0.1, 9.6, -0.9, -0.1, 9.6, -1.1, -0.1, 9.6, -0.9, -0.2, 9.6, -1.1, -0.1, 9.6, -1.1, 0.2, 9.6, -0.9, 0.1, 9.6, -0.9, 0.1, 9.6, -1.1, 0.1, 9.6, -0.9, -0.1, 9.6, -1.1, 0.1, 9.6, -1.1, 0.2, 9.6, -0.9, 0.1, 9.6, -1.1, 0.2, 9.6, -1.1, -0.1, 15.1, 5.1, -0.2, 15.1, 5.1, -0.2, 15.1, 1.5, -0.1, 15.1, 5.1, -0.2, 15.1, 1.5, -0.1, 15.1, 1.5, 0.2, 15.1, 5.1, 0.1, 15.1, 5.1, 0.1, 15.1, 1.5, 0.2, 15.1, 5.1, 0.1, 15.1, 1.5, 0.2, 15.1, 1.5, -0.1, 15.1, -1.6, -0.2, 15.1, -1.6, -0.2, 15.1, -5.2, -0.1, 15.1, -1.6, -0.2, 15.1, -5.2, -0.1, 15.1, -5.2, 0.2, 15.1, -1.6, 0.1, 15.1, -1.6, 0.1, 15.1, -5.2, 0.2, 15.1, -1.6, 0.1, 15.1, -5.2, 0.2, 15.1, -5.2, 0.2, 15.9, 6, -0.2, 15.9, 6, -0.2, 15.9, -6.1, 0.2, 15.9, 6, -0.2, 15.9, -6.1, 0.2, 15.9, -6.1)

[node name="Door" type="StaticBody3D" groups=["linkable"]]
script = ExtResource("1_7blwi")

[node name="FrontIdentifier" parent="." instance=ExtResource("1_grac4")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.3, 4.25, 0)

[node name="BackIdentifier" parent="." instance=ExtResource("1_grac4")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.3, 4.25, 0)

[node name="MovableDoor" type="MeshInstance3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
mesh = ExtResource("1_cju28")

[node name="DoorCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_xfypr")
